[package]
name = "mcbd-world-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
